# engram

./: .gitignore  Makefile  README.md  pyproject.toml
dashboard/: index.html  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  main.tsx  utils.ts
dashboard/src/components/: Sidebar.tsx
dashboard/src/pages/: DashboardPage.tsx  EntityDetailPage.tsx  GraphPage.tsx  SearchPage.tsx
docs/: getting-started.md
paper/: README.md  references.bib  yonakh-journal-revised.tex  yonakh-journal.tex
src/engram/: __init__.py  config.py
src/engram/api/: app.py  deps.py
src/engram/cli/: main.py
src/engram/db/: crypto_service.py  encryption.py  engine.py  migrations.py
src/engram/embedding/: base.py  local.py  openai.py  pipeline.py
src/engram/ingest/: base.py  git.py  manual.py  registry.py
src/engram/mcp_server/: server.py  tools.py
src/engram/models/: entities.py  events.py  provenance.py  relationships.py  search.py
src/engram/quality/: compaction.py  conflict.py  decay.py  deduplication.py  importance.py
src/engram/rules/: base.py  engine.py  git_rule.py  proposals.py  validator.py
src/engram/search/: fulltext.py  graph.py  hybrid.py  semantic.py
src/engram/store/: entity_store.py  event_store.py  fts_store.py  vector_store.py  (+2 more)
src/yonakh/: config.py
tests/: conftest.py  fake_embedding.py
tests/test_api/: test_routes.py
tests/test_db/: test_encryption.py
tests/test_embedding/: test_pipeline.py
tests/test_rules/: test_engine.py  test_findings.py  test_git_rule.py
tests/test_search/: test_hybrid.py
tests/test_store/: test_entity_store.py  test_event_store.py  test_fts_store.py  test_relationship_store.py
(+62 files in other folders)
