[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yonakh"
version = "0.1.0"
description = "Local-first AI memory server for software engineering workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Shashank Venkat", email = "shashyv@gmail.com" }]
keywords = ["ai", "memory", "knowledge-graph", "mcp", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-ulid>=3.0",
    "sqlite-vec>=0.1",
    "sentence-transformers>=3.0",
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "cryptography>=43.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.11",
]

[project.scripts]
yonakh = "yonakh.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/yonakh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
